# Rustrix

./: Cargo.toml  README.md  info.txt
src/: main.rs  matrix.rs  menu.rs  utils.rs
src/extra/: info.txt
src/lib/: matrix.rs  menu.rs  utils.rs
src/matrix/: matrix.rs
