[package]
name = "Rustrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.9.0"
colored = "1.9.3"

[profile.dev]
panic = 'abort'
opt-level = 3
lto = true
codegen-units = 1

[profile.release]
panic = 'abort'
opt-level = 3
lto = true
codegen-units = 1

